--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         <h1 title="My company">About us</h1>
 
-        <h1>This a h1 tag using for header title </h1>
+        <h>If this tutorial in bangla I think i will learn more.</h1>
 
        
         <h1>This is a flexbox practicing file followed by traverse media </h1>
