--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <!--this is CSS crush course practice followed by Traverse media-->
 <div class="container">
+    <header>This is CSS crush course followed by Traverse Media</header>
     <div class="box-1">
         <h1>Hello World</h1>
         <p>Lorem ipsum dolor sit amet consectetur, 
