add heading one

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--this is CSS crush course practice followed by Traverse media-->
 <div class="container">
     <header>
-        <h1></h1>This is CSS crush course followed by Traverse Media
+        <h1>This is CSS crush course followed by Traverse Media</h1>
     </header>
     <div class="box-1">
         <h1>Hello World</h1>
