add more section and style
Try to compleate the CSS class

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         inventore facere incidunt animi. Est fugiat ipsam optio
         numquam magnam sequi excepturi. Praesentium maiores harum pariatur labore 
         dolorem.</p>
+        <a class="button" href="">READ MORE</a>
     </div>
     <div class="box-2">
         <h1>Goodbye World</h1>
@@ -43,6 +44,7 @@
         inventore facere incidunt animi. Est fugiat ipsam optio
         numquam magnam sequi excepturi. Praesentium maiores harum pariatur labore 
         dolorem.</p>
+        <a class="button" href="">READ MORE</a>
     </div>
     <div class="categories">
         <h2>Categorise</h2>
@@ -54,8 +56,48 @@
             <li><a href="test.html">Category-5</a></li>
         </ul>
     </div>
-    <form action=""></form>
-</div> <!-- container -->
+    <form action="" class="my-form">
+        <div class="form-group">
+            <label for="">Name:</label>
+            <input type="text" name="name">
+        </div>
+        <div class="form-group">
+            <label for="">Email:</label>
+            <input type="text" name="email">
+        </div>
+        <div class="form-group">
+            <label for="">Message</label>
+            <textarea name="message" id="" cols="30" rows="10"></textarea>
+        </div>
+        <input class= "button" type="submit" value="Submit" name>
+    </form>
+    <div class="block">
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p> 
+    </div>
+    <div class="block">
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p>
+    </div>
+    <div class="block">
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p>
+    </div>
+    <div class="clr"></div>
+    <div id="main-block">
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p>
+    </div>
+    <div id="side-bar">
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p>
+    </div>
+    <div class="clr"></div>
+    <div class="p-box">
+        <h1>Hello</h1>
+        <h1>Goodbye</h1>
+    </div>
+</div> <!-- ./container -->
 
 
 
