--- a/Web-layout.html
+++ b/Web-layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My website</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="Web-layout-style.css" type="text/css">
 </head>
 <body>
     <header id="main-header">
@@ -39,6 +39,7 @@
     <footer id="main-footer">
         <p>Copyright &copy; 2021 My Website</p>
     </footer>
+
 
 </body>
 </html>
