--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <header>
         <h1>This is CSS crush course followed by Traverse Media</h1>
     </header>
+    <nav id="navbar">
+        <div class="container">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="Web-layout.html">Web Layout Design</a></li>
+                <li><a href="">About me</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
     <div class="box-1">
         <h1>Hello World</h1>
         <p>Lorem ipsum dolor sit amet consectetur, 
