--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="">Home</a></li>
                 <li><a href="Web-layout.html">Web Layout Design</a></li>
                 <li><a href="">About me</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </div>
