--- a/Web-layout.html
+++ b/Web-layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My website</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <link rel="stylesheet" href="Web-layout-style.css" type="text/css">
 </head>
 <body>
@@ -13,14 +14,13 @@
         </div>        
     </header>
     <nav id="navbar">
-        <div class="container">
-           <ul>
-               <li><a href="#"></a>Home</li>
-               <li><a href="#"></a>About</li>
-               <li><a href="#"></a>Services</li>
-               <li><a href="#"></a>Contact</li>
-           </ul>
-        </div>        
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="Web-layout.html">Web Layout Design</a></li>
+            <li><a href="about.html">About me</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
     <section id="showcase">
         <div class="container">
