--- a/index.html
+++ b/index.html
@@ -7,22 +7,46 @@
 
 </head>
 <body>
+    <!-- This is HTML crash course -->
+    <div class="banner">
+        <h1>This is HTML and CSS course</h1>
+        <p>followed by Traverse Media</p>
+        <nav id="navbar">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="Web-layout.html">Web Layout Design</a></li>
+                <li><a href="about.html">About me</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div id="html">
+        <div class="container">           
+            <h2>Here i am practicing a lot of <span><abbr title="Hyper Text MarkUp language">HTML</abbr></span> tag</h2>
+            <div class="heading-box">
+                <h1>This is a heading tag one</h1>
+                <h2>This is a heading tag two</h2>
+                <h3>This is a heading tag three</h3>
+                <h4>This is a heading tag Four</h4>
+                <h5>This is a heading tag Five</h5>
+                <h6>This is a heading tag Six</h6>
+            </div>
+            <div class="paragraph-box">
+                <h1>This is paragraph and herre some text formating html tag</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid reprehenderit et nobis laudantium voluptatum non eaque, culpa rerum vitae odio! Maxime veniam temporibus error odio sunt libero est laborum non, suscipit,<strong> vel harum aliquam reprehenderit facere!</strong> Iste officiis laborum cum debitis ipsa, alias praesentium? Perferendis eligendi <i>laudantium, molestiae nostrum eum dolor </i> assumenda a. Asperiores adipisci <span>corporis voluptate? Alias ad nulla iure minima </span> corporis voluptate? Alias ad nulla iure minima saepe vero doloremque magni porro quas dolores fugit eaque, quia harum laudantium perspiciatis earum odio et. Dolor officiis quae incidunt corporis, <b>onsequuntur voluptate nostrum nam pariatur</b> consequuntur voluptate nostrum nam pariatur quia excepturi maiores quos. Nisi distinctio hic fugit sequi enim, consectetur expedita?</p>
+            </div>
+        
+        </div>
+    </div>
+
 <!--this is CSS crush course practice followed by Traverse media-->
 <div class="container">
     <header>
         <h1>This is CSS crush course followed by Traverse Media</h1>
     </header>
-    <nav id="navbar">
-        <div class="container">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="Web-layout.html">Web Layout Design</a></li>
-                <li><a href="">About me</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+
     <div class="box-1">
         <h1>Hello World</h1>
         <p>Lorem ipsum dolor sit amet consectetur, 
