Menu change for checking class easily
I am trying to easily move my classes

--- a/Web-layout.html
+++ b/Web-layout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My website</title>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <link rel="stylesheet" href="Web-layout-style.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/Web-layout-style.css" type="text/css">
 </head>
 <body>
     <header id="main-header">
