--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav id="navbar">
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="Class-1">Web Layout Design</a></li>
-                <li><a href="Class-2">About me</a></li>
-                <li><a href="Class-3">Blog</a></li>
-                <li><a href="Class-4">Contact</a></li>
+                <li><a href="Web-layout.html">Class-1</a></li>
+                <li><a href="about.html">Class-2</a></li>
+                <li><a href="blog.html">Class-3</a></li>
+                <li><a href="contact.html">Class-4</a></li>
             </ul>
         </nav>
     </div>
