Delate Unwanted folder

--- a/Web-layout.html
+++ b/Web-layout.html
@@ -15,11 +15,11 @@
     </header>
     <nav id="navbar">
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="Web-layout.html">Web Layout Design</a></li>
-            <li><a href="about.html">About me</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="">Last class</a></li>
+            <li><a href="Web-layout.html">Class-1</a></li>
+            <li><a href="about.html">Class-2</a></li>
+            <li><a href="blog.html">Class-3</a></li>
+            <li><a href="contact.html">Class-4</a></li>
         </ul>
     </nav>
     <section id="showcase">
