--- a/about.html
+++ b/about.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="assets/css/about.css">
 </head>
 <body>
+    <div class="banner">
+        <h1>This is HTML and CSS course</h1>
+        <p>followed by Traverse Media</p>
+        <nav id="navbar">
+            <ul>
+                <li><a href="">Last class</a></li>
+                <li><a href="Web-layout.html">Class-1</a></li>
+                <li><a href="about.html">Class-2</a></li>
+                <li><a href="blog.html">Class-3</a></li>
+                <li><a href="contact.html">Class-4</a></li>
+            </ul>
+        </nav>
+    </div>
     <div class="container">
         <h1>This is about myself page</h1>
         i will try to use flexbox hrer to design 
