--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 </head>
 <body>
+    <div class="flex-container">
+        <h1>CSS Flex Box Practice Class</h1>
+    </div>
+    
     <!-- This is HTML crash course -->
     <div class="banner">
         <h1>This is HTML and CSS course</h1>
