Unwanted file and folder delated

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
             <p>followed by Traverse Media</p>
             <nav id="navbar">
                 <ul>
-                    <li><a href="">Last class</a></li>
+                    <li><a href="index.html">Last class</a></li>
                     <li><a href="Web-layout.html">Class-1</a></li>
                     <li><a href="about.html">Class-2</a></li>
                     <li><a href="blog.html">Class-3</a></li>
