--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
 
 </head>
 <body>
-    <div class="flex-container">
-        <h1>CSS Flex Box Practice Class</h1>
-    </div>
-    
     <!-- This is HTML crash course -->
     <div class="banner">
         <h1>This is HTML and CSS course</h1>
         <p>followed by Traverse Media</p>
         <nav id="navbar">
             <ul>
-                <li><a href="">Last class</a></li>
+                <li><a href="index.html">Last class</a></li>
                 <li><a href="Web-layout.html">Class-1</a></li>
                 <li><a href="about.html">Class-2</a></li>
                 <li><a href="blog.html">Class-3</a></li>
