--- a/Web-layout.html
+++ b/Web-layout.html
@@ -15,7 +15,7 @@
     </header>
     <nav id="navbar">
         <ul>
-            <li><a href="">Last class</a></li>
+            <li><a href="index.html">Last class</a></li>
             <li><a href="Web-layout.html">Class-1</a></li>
             <li><a href="about.html">Class-2</a></li>
             <li><a href="blog.html">Class-3</a></li>
@@ -39,7 +39,5 @@
     <footer id="main-footer">
         <p>Copyright &copy; 2021 My Website</p>
     </footer>
-
-
 </body>
 </html>
