making One page website
Scroll by ID, when click every classes page move to every section

--- a/index.html
+++ b/index.html
@@ -7,23 +7,40 @@
 
 </head>
 <body>
-    <!-- This is HTML crash course -->
+    <!-- Header section start-->
     <div class="banner">
         <h1>This is HTML and CSS course</h1>
         <p>followed by Traverse Media</p>
         <nav id="navbar">
             <ul>
-                <li><a href="index.html">Last class</a></li>
-                <li><a href="Web-layout.html">Class-1</a></li>
-                <li><a href="about.html">Class-2</a></li>
-                <li><a href="blog.html">Class-3</a></li>
-                <li><a href="contact.html">Class-4</a></li>
+                <li><a href="#home">Last class</a></li>
+                <li><a href="#class-1">Class-1</a></li>
+                <li><a href="#class-2">Class-2</a></li>
+                <li><a href="#class-3">Class-3</a></li>
+                <li><a href="#class-4">Class-4</a></li>
             </ul>
         </nav>
     </div>
+    <!--  Header section end  -->
+    <!-- Flex-box practice section -->
+    <div class="container-1" id="home">
+        <div class="box-">
+            <h3>Box One</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores mollitia sapiente odio tenetur ratione aspernatur suscipit itaque veritatis, laboriosam vitae sed ducimus consequatur quidem porro vero illum blanditiis eligendi officiis.</p>
+        </div>
+        <div class="box-">
+            <h3>Box One</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores mollitia sapiente odio tenetur ratione aspernatur suscipit itaque veritatis, laboriosam vitae sed ducimus consequatur quidem porro vero illum blanditiis eligendi officiis.</p>
+        </div>
+        <div class="box-">
+            <h3>Box One</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores mollitia sapiente odio tenetur ratione aspernatur suscipit itaque veritatis, laboriosam vitae sed ducimus consequatur quidem porro vero illum blanditiis eligendi officiis.</p>
+        </div>
+    </div>
+    <!-- Flex-box end -->
 
     <div id="html">
-        <div class="container">           
+        <div class="container" id="class-1">           
             <h2>Here i am practicing a lot of <span><abbr title="Hyper Text MarkUp language">HTML</abbr></span> tag</h2>
             <div class="heading-box">
                 <h1>This is a heading tag one</h1>
@@ -42,7 +59,7 @@
     </div>
 
 <!--this is CSS crush course practice followed by Traverse media-->
-<div class="container">
+<div class="container" id="class-2">
     <header>
         <h1>This is CSS crush course followed by Traverse Media</h1>
     </header>
@@ -146,9 +163,11 @@
 </div> <!-- ./container -->
 
 <a class="fix-me button" href="">Hello</a>
-
-
 <div class="" style="margin-top: 500px;"></div>
+<footer id="main-footer">
+    <p>Copyright &copy; 2021 My Website</p>
+</footer>
+
 
 
 
