change header section
This is upgraded website for my practices.

--- a/index.html
+++ b/index.html
@@ -8,19 +8,40 @@
 </head>
 <body>
     <!-- Header section start-->
-    <div class="banner">
-        <h1>This is HTML and CSS course</h1>
-        <p>followed by Traverse Media</p>
-        <nav id="navbar">
-            <ul>
-                <li><a href="#home">Last class</a></li>
-                <li><a href="#class-1">Class-1</a></li>
-                <li><a href="#class-2">Class-2</a></li>
-                <li><a href="#class-3">Class-3</a></li>
-                <li><a href="#class-4">Class-4</a></li>
-            </ul>
-        </nav>
-    </div>
+    <header class="section-bg">
+        <div class=" container">
+            <div class="header-container">
+                <div class="logo-area">
+                    <h1>Abul <span>Kasem.</span></h1>
+                </div>
+                <div class="menu-area">
+                    <ul>
+                        <li><a href="">Last Class</a></li>
+                        <li><a href=""> Class-1</a></li>
+                        <li><a href="">Class-2</a></li>
+                        <li><a href="">Class-3</a></li>
+                        <li><a href="">Class-4</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="section-padding">
+                <div class="banner-area">
+                    <div class="banner-text">
+                        <h3>Welcome</h3>
+                        <h1>I'M A STUDENT OF WEB DEVELOPMENT</h1>
+                        <p> i am a tech lover try to upgrade my skill</p>
+                        <a href="#about" class="boxed-btn">WHO I AM</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="container">
+
+    </section>
+    
+   
+
     <!--  Header section end  -->
     <!-- Flex-box practice section -->
     <div class="container-1" id="home">
@@ -162,7 +183,7 @@
     </ul>
 </div> <!-- ./container -->
 
-<a class="fix-me button" href="">Hello</a>
+
 <div class="" style="margin-top: 500px;"></div>
 <footer id="main-footer">
     <p>Copyright &copy; 2021 My Website</p>
