--- a/index.html
+++ b/index.html
@@ -36,8 +36,19 @@
             </div>
         </div>
     </header>
-    <section class="container">
-
+    <section class="section-padding">
+        <div class="container">
+            <div id="about">
+                <div class="about-image"></div>
+                <div class="about-text">
+                    <h1><span>About </span>Me</h1>
+                    <h2>Hello! I'm Abul Kasem</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nobis culpa, dolor modi voluptas tenetur earum laboriosam at rerum nulla perspiciatis quisquam libero. Cum unde rem aliquid nemo tempora dolorem?</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nobis culpa, dolor modi voluptas tenetur earum laboriosam at rerum nulla perspiciatis quisquam libero. Cum unde rem aliquid nemo tempora dolorem?</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nobis culpa, dolor modi voluptas tenetur earum laboriosam at rerum nulla perspiciatis quisquam libero. Cum unde rem aliquid nemo tempora dolorem?</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nobis culpa, dolor modi voluptas tenetur earum laboriosam at rerum nulla perspiciatis quisquam libero. Cum unde rem aliquid nemo tempora dolorem?</p>
+            </div>
+        </div>
     </section>
     
    
