Upto date Practicing Before 4th live class

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                 <div class="menu-area">
                     <ul>
                         <li><a href="">Last Class</a></li>
-                        <li><a href=""> Class-1</a></li>
-                        <li><a href="">Class-2</a></li>
+                        <li><a href="#class-1"> Class-1</a></li>
+                        <li><a href="#class-2">Class-2</a></li>
                         <li><a href="">Class-3</a></li>
                         <li><a href="">Class-4</a></li>
                     </ul>
                 </div>
             </div>
-            <div class="section-padding">
+            <div class="pdt-200">
                 <div class="banner-area">
                     <div class="banner-text">
                         <h3>Welcome</h3>
@@ -37,7 +37,7 @@
         </div>
     </header>
     <!--  Header section end  -->
-    <section class="section-padding">
+    <section class="pdt-80">
         <div class="container">
             <div id="about">
                 <div class="about-image"></div>
@@ -51,15 +51,8 @@
             </div>
         </div>
     </section>
-    
-   
-
-
-
-    <!-- Flex-box end -->
-
-    <div id="html">
-        <div class="container" id="class-1">           
+    <div id="class-1">
+        <div class="pdt-80 container">
             <h2>Here i am practicing a lot of <span><abbr title="Hyper Text MarkUp language">HTML</abbr></span> tag</h2>
             <div class="heading-box">
                 <h1>This is a heading tag one</h1>
@@ -73,119 +66,112 @@
                 <h1>This is paragraph and herre some text formating html tag</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid reprehenderit et nobis laudantium voluptatum non eaque, culpa rerum vitae odio! Maxime veniam temporibus error odio sunt libero est laborum non, suscipit,<strong> vel harum aliquam reprehenderit facere!</strong> Iste officiis laborum cum debitis ipsa, alias praesentium? Perferendis eligendi <i>laudantium, molestiae nostrum eum dolor </i> assumenda a. Asperiores adipisci <span>corporis voluptate? Alias ad nulla iure minima </span> corporis voluptate? Alias ad nulla iure minima saepe vero doloremque magni porro quas dolores fugit eaque, quia harum laudantium perspiciatis earum odio et. Dolor officiis quae incidunt corporis, <b>onsequuntur voluptate nostrum nam pariatur</b> consequuntur voluptate nostrum nam pariatur quia excepturi maiores quos. Nisi distinctio hic fugit sequi enim, consectetur expedita?</p>
             </div>
-        
         </div>
     </div>
-
-<!--this is CSS crush course practice followed by Traverse media-->
-<div class="container" id="class-2">
-    <header>
+  
+    <div class="pdt-80 container" id="class-2">
         <h1>This is CSS crush course followed by Traverse Media</h1>
-    </header>
-
-    <div class="box-1">
-        <h1>Hello World</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, 
-        adipisicing elit. Incidunt, fugit quidem nisi 
-        temporibus quam alias sunt quo accusantium soluta 
-        velit minus, sit, nostrum libero possimus.
-        Necessitatibus libero voluptatibus voluptate 
-        aliquam! Lorem ipsum dolor, sit amet consectetur
-        adipisicing elit. Illo cumque quisquam quam assumenda
-        consequatur voluptatum. Aspernatur mollitia molestias ea,
-        distinctio exercitationem iste, ratione ut cupiditate 
-        eum doloremque aliquam vitae praesentium eaque officiis 
-        inventore facere incidunt animi. Est fugiat ipsam optio
-        numquam magnam sequi excepturi. Praesentium maiores harum pariatur labore 
-        dolorem.</p>
-        <a class="button" href="">READ MORE</a>
-    </div>
-    <div class="box-2">
-        <h1>Goodbye World</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, 
-        adipisicing elit. Incidunt, fugit quidem nisi 
-        temporibus quam alias sunt quo accusantium soluta 
-        velit minus, sit, nostrum libero possimus.
-        Necessitatibus libero voluptatibus voluptate 
-        aliquam! Lorem ipsum dolor, sit amet consectetur
-        adipisicing elit. Illo cumque quisquam quam assumenda
-        consequatur voluptatum. Aspernatur mollitia molestias ea,
-        distinctio exercitationem iste, ratione ut cupiditate 
-        eum doloremque aliquam vitae praesentium eaque officiis 
-        inventore facere incidunt animi. Est fugiat ipsam optio
-        numquam magnam sequi excepturi. Praesentium maiores harum pariatur labore 
-        dolorem.</p>
-        <a class="button" href="">READ MORE</a>
-    </div>
-    <div class="categories">
-        <h2>Categorise</h2>
-        <ul>
-            <li><a href="">Category-1</a></li>
-            <li><a href="">Category-2</a></li>
-            <li><a href="">Category-3</a></li>
-            <li><a href="">Category-4</a></li>
-            <li><a href="test.html">Category-5</a></li>
+        <div class="box-1">
+            <h1>Hello World</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, 
+            adipisicing elit. Incidunt, fugit quidem nisi 
+            temporibus quam alias sunt quo accusantium soluta 
+            velit minus, sit, nostrum libero possimus.
+            Necessitatibus libero voluptatibus voluptate 
+            aliquam! Lorem ipsum dolor, sit amet consectetur
+            adipisicing elit. Illo cumque quisquam quam assumenda
+            consequatur voluptatum. Aspernatur mollitia molestias ea,
+            distinctio exercitationem iste, ratione ut cupiditate 
+            eum doloremque aliquam vitae praesentium eaque officiis 
+            inventore facere incidunt animi. Est fugiat ipsam optio
+            numquam magnam sequi excepturi. Praesentium maiores harum pariatur labore 
+            dolorem.</p>
+            <a class="button" href="">READ MORE</a>
+        </div>
+        <div class="box-2">
+            <h1>Goodbye World</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, 
+            adipisicing elit. Incidunt, fugit quidem nisi 
+            temporibus quam alias sunt quo accusantium soluta 
+            velit minus, sit, nostrum libero possimus.
+            Necessitatibus libero voluptatibus voluptate 
+            aliquam! Lorem ipsum dolor, sit amet consectetur
+            adipisicing elit. Illo cumque quisquam quam assumenda
+            consequatur voluptatum. Aspernatur mollitia molestias ea,
+            distinctio exercitationem iste, ratione ut cupiditate 
+            eum doloremque aliquam vitae praesentium eaque officiis 
+            inventore facere incidunt animi. Est fugiat ipsam optio
+            numquam magnam sequi excepturi. Praesentium maiores harum pariatur labore 
+            dolorem.</p>
+            <a class="button" href="">READ MORE</a>
+        </div>
+        <div class="categories">
+            <h2>Categorise</h2>
+            <ul>
+                <li><a href="">Category-1</a></li>
+                <li><a href="">Category-2</a></li>
+                <li><a href="">Category-3</a></li>
+                <li><a href="">Category-4</a></li>
+                <li><a href="test.html">Category-5</a></li>
+            </ul>
+        </div>
+        <form action="" class="my-form">
+            <div class="form-group">
+                <label for="">Name:</label>
+                <input type="text" name="name">
+            </div>
+            <div class="form-group">
+                <label for="">Email:</label>
+                <input type="text" name="email">
+            </div>
+            <div class="form-group">
+                <label for="">Message</label>
+                <textarea name="message" id="" cols="30" rows="10"></textarea>
+            </div>
+            <input class= "button" type="submit" value="Submit" name>
+        </form>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p> 
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p>
+        </div>
+        <div class="clr"></div>
+        <div id="main-block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p>
+        </div>
+        <div id="side-bar">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p>
+        </div>
+        <div class="clr"></div>
+        <div class="p-box">
+            <h1>Hello</h1>
+            <h2>Goodbye</h2>
+        </div>
+        <ul class="my-list">
+            <li><a href="">Lisst Item</a></li>
+            <li><a href="">Lisst Item</a></li>
+            <li><a href="">Lisst Item</a></li>
+            <li><a href="">Lisst Item</a></li>
+            <li><a href="">Lisst Item</a></li>
+            <li><a href="">Lisst Item</a></li>
+            <li><a href="">Lisst Item</a></li>
+            <li><a href="">Lisst Item</a></li>
+            <li><a href="">Lisst Item</a></li>
         </ul>
-    </div>
-    <form action="" class="my-form">
-        <div class="form-group">
-            <label for="">Name:</label>
-            <input type="text" name="name">
-        </div>
-        <div class="form-group">
-            <label for="">Email:</label>
-            <input type="text" name="email">
-        </div>
-        <div class="form-group">
-            <label for="">Message</label>
-            <textarea name="message" id="" cols="30" rows="10"></textarea>
-        </div>
-        <input class= "button" type="submit" value="Submit" name>
-    </form>
-    <div class="block">
-        <h3>Heading</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p> 
-    </div>
-    <div class="block">
-        <h3>Heading</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p>
-    </div>
-    <div class="block">
-        <h3>Heading</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p>
-    </div>
-    <div class="clr"></div>
-    <div id="main-block">
-        <h3>Heading</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p>
-    </div>
-    <div id="side-bar">
-        <h3>Heading</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ab in similique alias nisi cum vero voluptates dolor quis atque laboriosam, possimus adipisci provident omnis fugit molestiae odit doloribus. Iste!</p>
-    </div>
-    <div class="clr"></div>
-    <div class="p-box">
-        <h1>Hello</h1>
-        <h2>Goodbye</h2>
-    </div>
-    <ul class="my-list">
-        <li><a href="">Lisst Item</a></li>
-        <li><a href="">Lisst Item</a></li>
-        <li><a href="">Lisst Item</a></li>
-        <li><a href="">Lisst Item</a></li>
-        <li><a href="">Lisst Item</a></li>
-        <li><a href="">Lisst Item</a></li>
-        <li><a href="">Lisst Item</a></li>
-        <li><a href="">Lisst Item</a></li>
-        <li><a href="">Lisst Item</a></li>
-    </ul>
-</div> <!-- ./container -->
-
-
-<div class="" style="margin-top: 500px;"></div>
-<footer id="main-footer">
-    <p>Copyright &copy; 2021 My Website</p>
-</footer>
+    </div> 
+    <footer class=" container main-footer">
+        <p>Copyright &copy; 2021 My Website</p>
+    </footer>
+</body>
 
 
 
