--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nobis culpa, dolor modi voluptas tenetur earum laboriosam at rerum nulla perspiciatis quisquam libero. Cum unde rem aliquid nemo tempora dolorem?</p>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nobis culpa, dolor modi voluptas tenetur earum laboriosam at rerum nulla perspiciatis quisquam libero. Cum unde rem aliquid nemo tempora dolorem?</p>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nobis culpa, dolor modi voluptas tenetur earum laboriosam at rerum nulla perspiciatis quisquam libero. Cum unde rem aliquid nemo tempora dolorem?</p>
+                </div>
             </div>
         </div>
     </section>
