lot of changes depending on live classes
This is a lot of changes.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Header section start-->
-    <header class="section-bg">
+    <header class="section-bg bg-overlay">
         <div class=" container">
             <div class="header-container">
                 <div class="logo-area">
