--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
     </section>
 <!--  gallery-section-end  -->
-    <footer class=" container main-footer">
+    <footer class="main-footer">
         <p>Copyright &copy; 2021 My Website</p>
     </footer>
 </body>
