some changes in footer area

--- a/index.html
+++ b/index.html
@@ -104,7 +104,26 @@
     </section>
 <!--  gallery-section-end  -->
     <footer class="main-footer">
-        <p>Copyright &copy; 2021 My Website</p>
+        <div class="footer-menu">
+            <ul>
+                <li><a href=""><i class="fab facebook"></i></a></li>
+                <li><a href="">Generic</a></li>
+                <li><a href="">Elements</a></li>
+            </ul>
+        </div>
+        <div class="footer-social">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Generic</a></li>
+                <li><a href="">Elements</a></li>
+            </ul>
+        </div>
+        <div class="copyright-text">
+            Copyright&copy; Allright reserved by Abul kasem
+            <script>document.write(new Date().getFullYear());</script>
+            <a href="https://kasem32833.github.io" target="_blank">Tech creator</a>
+        </div>
+        
     </footer>
 </body>
 
